# thorc

./: .gitignore  Cargo.toml  shell.nix  thor-config.nix
src/: config.rs  error.rs  find_result.rs  index.rs  lib.rs  main.rs  remote_index.rs  repo_def.rs  ro.rs  template.rs  utils.rs
